--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 
  /* !Layout */
  @import url(layout/header.css);
+ @import url(layout/footer.css);
 
  /* !Components */
  @import url(components/modal-search.css);
