--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -40,7 +40,7 @@ header {
   display: none;
 }
 
-.header-left .logo {
+.logo {
   font-size: 24px;
   font-weight: 500;
   display: flex;
@@ -138,6 +138,7 @@ header .menu-dropdown-wrapper {
   opacity: 0;
   visibility: hidden;
   transition: all 0.2s ease;
+  z-index: 1;
 }
 
 header .menu-dropdown-content {
