--- a/css/pages/single-product.css
+++ b/css/pages/single-product.css
@@ -1,5 +1,6 @@
-/*! topbar start  */
 .single-topbar {
     margin-top: 30px;
   }
-  /*! topbar end  */
+  .single-content {
+    margin: 30px 0;
+  }
