--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,4 @@
  @import url(pages/account.css);
  @import url(pages/cart.css);
  @import url(pages/single-product.css);
+ @import url(pages/blog.css);
