--- a/css/components/modal-search.css
+++ b/css/components/modal-search.css
@@ -9,13 +9,17 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
+  z-index: 999;
+  opacity: 0;
+  transition: 1s ease all; 
 }
 
 .modal-search::after {
   content: '';
   width: 100%;
   height: 100%;
-  background-color: black;
+  /* background-color: black; */
+  /* background-color: #FFB100; */
   position: fixed;
   top: 0;
   left: 0;
@@ -29,6 +33,9 @@
   position: fixed;
   z-index: 10;
   padding: 30px;
+  -webkit-box-shadow: 1px 3px 163px 79px rgba(46,49,245,1);
+-moz-box-shadow: 1px 3px 163px 79px rgba(46,49,245,1);
+box-shadow: 1px 3px 163px 79px rgba(46,49,245,1);
 }
 
 .modal-search .modal-title {
