--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,6 +1,16 @@
 /*! header start  */
+.sab{
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  background-color: white;
+  backdrop-filter: 10px;
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+}
 
 header {
+  width: 100%;
   border-bottom: 1px solid #dee0ea;
   position: relative;
 }
@@ -101,7 +111,7 @@ header {
   font-size: 23px;
 }
 
-.header-right .toggle-button {
+.header-right .search-button {
   border: none;
   background-color: transparent;
 }
