feat: added slider made dynamic

--- a/css/components/modal-search.css
+++ b/css/components/modal-search.css
@@ -18,7 +18,7 @@
   content: '';
   width: 100%;
   height: 100%;
-  /* background-color: black; */
+  background-color: black;
   /* background-color: #FFB100; */
   position: fixed;
   top: 0;
