--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -84,9 +84,7 @@
     transition: 0.2s ease opacity;
   }
   
-  .slider .slider-dots .slider-dot:hover {
-    opacity: 1;
-  }
+
   
   .slider .slider-dots .slider-dot span {
     display: inline-block;
@@ -94,6 +92,27 @@
     height: 12px;
     background-color: #1367ef;
     border-radius: 100%;
+  }
+
+  .slider .slider-dots .slider-dot.active {
+    opacity: 1;
+    background-color: #1367ef;
+    border-radius: 100%;
+
+  }
+  
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {
+      opacity: 0.4;
+    }
+    to {
+      opacity: 1;
+    }
   }
   
   @media (max-width: 768px) {
