--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -29,11 +29,10 @@
   margin-bottom: 40px;
 }
 
-.products .product-list {
+/* .products .product-list {
   display: flex;
-  gap: 20px;
   flex-wrap: wrap;
-}
+} */
 /*! products end  */
 
 /*! campaign start  */
