fix: product editing

--- a/css/components/category-item.css
+++ b/css/components/category-item.css
@@ -5,6 +5,9 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    -webkit-box-shadow: 3px 20px 26px -3px rgba(19,103,239,1);
+-moz-box-shadow: 3px 20px 26px -3px rgba(19,103,239,1);
+box-shadow: 3px 20px 26px -3px rgba(19,103,239,1);
 }
 
 .categories .category-item a{
