--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,38 +1,40 @@
 .section-title {
-    text-align: center;
-    margin-bottom: 35px;
-  }
-  
-  .section-title h2 {
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 0.8;
-  margin-bottom: 4px;
-  }
-  
-  /*! categories start  */
-  .categories {
-    margin: 40px 0;
-  }
-  
-  .categories .category-list {
-    display: flex;
-    gap: 30px;
-    margin-top: 30px;
-    flex-wrap: wrap;
-  }
-  /*! categories end  */
+  text-align: center;
+  margin-bottom: 35px;
+}
 
-  /*! products start  */
+.section-title h2 {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 0.8;
+  margin-bottom: 4px;
+}
+
+/*! categories start  */
+.categories {
+  margin: 40px 0;
+}
+
+.categories .category-list {
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  
+}
+/*! categories end  */
+
+/*! products start  */
 
 .products {
   margin-bottom: 40px;
 }
 
-/* .products .product-list {
-  display: flex;
-  flex-wrap: wrap;
-} */
+.products .product-list {
+  /*   display: flex;
+  gap: 20px;
+  flex-wrap: wrap; */
+}
 /*! products end  */
 
 /*! campaign start  */
@@ -57,25 +59,24 @@
 /*! blogs end  */
 
 /*! brands start  */
-.brands{
+.brands {
   margin: 40px 0;
 }
 
-.brand-list{
+.brand-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   border: 1px solid #dee0ea;
   padding: 30px 5px;
-  row-gap: 50px;
 }
 
-.brand-list .brand-item{
+.brand-list .brand-item {
   opacity: 0.4;
-  transition: .2s ease opacity;
+  transition: 0.2s ease opacity;
 }
 
-.brand-list .brand-item:hover{
+.brand-list .brand-item:hover {
   opacity: 1;
 }
 /*! brands end  */
@@ -120,14 +121,14 @@
 
 /*! policy end  */
 
-/*! responsive  */
+/* responsive  */
 
 @media (max-width: 768px) {
   .blogs .blog-list {
     grid-template-columns: 1fr;
   }
+
   .policy .policy-list {
     flex-direction: column;
-    row-gap: 20px;
   }
 }
